--- a/index.html
+++ b/index.html
@@ -4,9 +4,77 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>AI 수학 튜터</title>
+  <style>
+    :root { --bd:#e5e7eb; }
+    body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif; margin: 32px; line-height: 1.6; }
+    .wrap { max-width: 820px; margin: 0 auto; }
+    .card { border:1px solid var(--bd); border-radius:16px; padding:20px; }
+    h1 { margin: 0 0 12px; }
+    label { display:block; font-weight:600; margin:10px 0 6px; }
+    textarea { width:100%; min-height:120px; padding:12px; border:1px solid var(--bd); border-radius:12px; box-sizing:border-box; }
+    button { padding:10px 14px; border:1px solid var(--bd); border-radius:12px; background:#fff; cursor:pointer; }
+    .row { display:flex; gap:10px; align-items:center; }
+    pre { background:#f8fafc; border:1px solid var(--bd); border-radius:12px; padding:12px; white-space:pre-wrap; word-break:break-word; }
+    .muted { color:#6b7280; font-size:13px; }
+  </style>
 </head>
 <body>
-  <h1>AI 수학 튜터</h1>
-  <p>이 페이지는 AI 수학 튜터 앱의 프런트엔드입니다.</p>
+  <div class="wrap">
+    <h1>AI 수학 튜터</h1>
+    <div class="card" style="margin-bottom:14px;">
+      <label for="problem">문제 입력</label>
+      <textarea id="problem" placeholder="예) 2x + 3 = 7, x 값을 구하시오."></textarea>
+      <div class="row" style="margin-top:12px;">
+        <button id="solveBtn">풀기 (Ctrl+Enter)</button>
+        <span id="status" class="muted"></span>
+      </div>
+      <div class="muted" style="margin-top:8px;">Tip: Enter만 누르면 줄바꿈, <b>Ctrl+Enter</b>로 바로 풀이 요청합니다.</div>
+    </div>
+
+    <div class="card">
+      <h3 style="margin-top:0;">결과</h3>
+      <pre id="answer">아직 결과가 없습니다.</pre>
+    </div>
+  </div>
+
+  <script>
+    const $ = (s) => document.querySelector(s);
+    const problemEl = $('#problem');
+    const answerEl = $('#answer');
+    const statusEl = $('#status');
+    const solveBtn = $('#solveBtn');
+
+    async function solve() {
+      const problem = problemEl.value.trim();
+      if (!problem) { alert('문제를 입력해 주세요.'); return; }
+      statusEl.textContent = '풀이 중…';
+      answerEl.textContent = '';
+      try {
+        const res = await fetch('/api/solve', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ problem })
+        });
+        if (!res.ok) {
+          const t = await res.text();
+          throw new Error(`HTTP ${res.status}: ${t}`);
+        }
+        const data = await res.json();
+        answerEl.textContent = data.answer || '(응답이 비어있습니다)';
+      } catch (e) {
+        answerEl.textContent = '에러: ' + (e?.message || e);
+      } finally {
+        statusEl.textContent = '';
+      }
+    }
+
+    solveBtn.addEventListener('click', solve);
+    problemEl.addEventListener('keydown', (e) => {
+      if (e.key === 'Enter' && (e.ctrlKey || e.metaKey)) {
+        e.preventDefault();
+        solve();
+      }
+    });
+  </script>
 </body>
 </html>
