--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
     main{max-width:1100px;margin:20px auto;padding:0 16px;display:grid;gap:16px}
     .grid{display:grid;gap:16px} @media(min-width:980px){.grid{grid-template-columns:360px 1fr}}
     .panel{background:linear-gradient(180deg,var(--panel),var(--panel2));border:1px solid var(--line);border-radius:16px;padding:16px}
-    .panel h2{margin:0 0 10px;color:#b8c3d6;font-size:14px}
     .uploader{display:flex;gap:10px}.uploader .btn{flex:1} @media(max-width:520px){.uploader{flex-direction:column}}
     .btn{cursor:pointer;border:none;border-radius:12px;padding:13px 16px;font-weight:800;background:#1b2230;color:#e8eef7;transition:.2s}
     .btn.primary{background:linear-gradient(135deg,var(--accent),var(--accent2));color:#fff}
@@ -45,6 +44,8 @@
     .actions{display:flex;gap:8px;flex-wrap:wrap;margin-top:8px}
     input[type=file]{display:none}
     .status{font-size:12px;color:#9fb1c8;margin-top:6px}
+    footer{max-width:1100px;margin:24px auto 40px;padding:0 16px;color:var(--muted);font-size:13px;text-align:center}
+    footer a{color:inherit;text-decoration:none;border-bottom:1px dashed #ffffff30}
   </style>
 </head>
 <body>
@@ -61,7 +62,6 @@
   <main class="grid">
     <!-- 좌: 업로드/상태 -->
     <section class="panel">
-      <h2>문제 사진 업로드</h2>
       <div class="uploader" style="margin-top:6px">
         <input id="imageInput" type="file" accept="image/*">
         <button id="btnUpload" class="btn primary" type="button">📤 문제사진 업로드</button>
@@ -92,6 +92,10 @@
       <div id="chat"></div>
     </section>
   </main>
+
+  <footer>
+    문의: <a href="mailto:dongja279@gmail.com">dongja279@gmail.com</a>
+  </footer>
 
   <script>
     // ===== DOM =====
